# tonno

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cla_test.md  handover.md  pyproject.toml  v0.2-plan.md
.claude/: settings.json
.claude/commands/: harden.md
.github/workflows/: ci.yml  release.yml
examples/: matmul.py
src/tonno/: __init__.py  cache.py  config.py  hardware.py  tune.py
tests/: test_autotune.py  test_cache.py  test_config.py  test_tune.py
