[project]
name = "tonno"
version = "0.1.0"
description = "Autotuning for JAX/Pallas kernels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jax"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
