[project]
name = "tonno"
version = "0.1.0"
description = "Autotuning for JAX/Pallas kernels"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jax"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-env>=1.1.5",
]

[tool.pytest.ini_options]
addopts = "-v --color=yes"

[tool.pytest_env]
JAX_PLATFORMS = "cpu"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src/tonno"]
exclude = ["tests/"]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeStubs = false

[tool.ruff]
src = ["src"]
