[project]
name = "tonno"
version = "0.1.0"
description = "Autotuning for JAX/Pallas kernels"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Jonas Köhler", email = "jonas@cusp.ai" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["jax"]

[project.urls]
Homepage = "https://github.com/cusp-ai/tonno"
Repository = "https://github.com/cusp-ai/tonno"
Issues = "https://github.com/cusp-ai/tonno/issues"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-env>=1.1.5",
]

[tool.pytest.ini_options]
addopts = "-v --color=yes"

[tool.pytest_env]
JAX_PLATFORMS = "cpu"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src/tonno"]
exclude = ["tests/"]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeStubs = false

[tool.ruff]
src = ["src"]
